Changelog
=========

1.5.dev0 - (unreleased)
-----------------------

1.4 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

1.3 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

1.2 - (2015-10-05)
------------------
* Bug fix: Instance name param added to graylog's log entry
  [lucas, refs #28304]

1.1 - (2015-07-06)
------------------
* Bug fix: Added hard dependency to amqplib in order to fix GELFRabbitHandler
  [voineali refs #21610]

1.0 - (2015-05-05)
------------------
* Initial release
  [voineali]
