@@ -3,6 +3,8 @@ Changelog
 
 1.5.dev0 - (unreleased)
 -----------------------
+* Bug fix: Fix to work with graypy 0.2.14+ (facility override)
+  [avoinea refs #85963]
 
 1.4 - (2017-05-15)
 ------------------
